--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-Just my thesis.
+All you want to know is <a href="http://lenaherrmann.net/2010/10/27/ta-da-here-is-my-thesis">in the blogpost</a>.
+
+You can also <a href="http://www.scribd.com/doc/40221773/Umsetzung-einer-verteilten-Anwendung-mit-der-dokumentenorientierten-Datenbank-CouchDB">read the thesis online in one document</a> or <a href="https://github.com/lenalena/thesis_de/raw/master/Lena_Herrmann_CouchDB_Diplomarbeit.pdf">download the pdf</a>.
+
+The <a href="https://github.com/lenalena/thesis_en">english version can be found here</a>.
